# open-wells

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  README_pypi.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
hi_lo_wells/: app.py  core.py  prefs.py  qt_app.py
hi_lo_wells/static/: sample_input.csv  script.js  style.css
hi_lo_wells/templates/: index.html
hi_lo_wells/templates/partials/: result.html
omni_wells/: app.py  prefs.py  qt_app.py
omni_wells/static/: style.css
omni_wells/templates/: index.html
open_wells/: app.py  core.py
open_wells/static/: script.js
open_wells/templates/: index.html
open_wells/templates/partials/: table_body.html
tests/: conftest.py
tests/integration/: test_routes.py
tests/unit/: test_app.py  test_core.py  test_prefs.py
