[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omni-wells"
version = "0.1.0"
description = "Desktop tool for producer–injector well matching based on economic index and 3D distance, implementing the fast opening schedule procedure by Diniz et al."
readme = { file = "README_pypi.md", content-type = "text/markdown" }
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "PyQt6>=6.6",
    "PyQt6-WebEngine>=6.6",
    "build>=1.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff==0.15.16"]

[project.scripts]
omni-wells = "omni_wells.qt_app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["omni_wells*"]

[tool.setuptools.package-data]
omni_wells = ["templates/**/*", "static/*"]

[tool.pytest.ini_options]
addopts = "--cov=omni_wells --cov-branch --cov-report=term-missing --cov-report=html"

testpaths = ["tests"]
[tool.coverage.run]
source = ["omni_wells"]
omit = ["omni_wells/qt_app.py"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:", "pragma: no cover"]
fail_under = 80

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
